# RegiLattice

./: .cliff.toml  .csharpierrc.json  .dockerignore  .editorconfig  .env.ps1  .flake8  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  Add-DisableCortana.ps1  Add-DisableGameDVR.ps1  Add-DisableLastAccess.ps1  Add-DisableMouseAccel.ps1  Add-DisableTelemetry.ps1  Add-LongPaths.ps1  Add-Performance.ps1  Add-RecentFolders.ps1  Add-RegistryBackup.ps1  Add-SvcHostSplit.ps1  Add-TakeOwnership.ps1  Add-VerboseBoot.ps1  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.md  Contributing.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Dockerfile  LICENSE  Launch-RegiLattice.bat  Launch-RegiLattice.ps1  Launch-TurboTweak.bat  Lib-BackupRegistry.ps1  Lib-CorpGuard.ps1  Lib-TurboTweak.ps1  PROJECT_SPEC_PROMPT.md  README.md  (+33 more)
.config/: dotnet-tools.json
.github/: ARCHITECTURE.md  CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  INSTRUCTIONS.md  PULL_REQUEST_TEMPLATE.md  SKILLS.md  WORKFLOW.md  architecture.md  contributing.md  copilot-instructions.md  dependabot.yml  labeler.yml  security.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  build_issue.yml  config.yml  feature_request.md  feature_request.yml  new_tweak.md  new_tweak.yml  pack-submission.yml  performance_issue.md  performance_issue.yml  release.yml
.github/agents/: regilattice.agent.md
.github/context/: gui-components.md  session-log.md  tweak-inventory.md
.github/instructions/: cicd.instructions.md  csharp.instructions.md  git-workflow.instructions.md  lessons-learned.instructions.md  no-duplication.instructions.md  python.instructions.md  testing.instructions.md  workspace.instructions.md
.github/prompts/: add-tweak.prompt.md  audit-categories.prompt.md  check-tool-updates.prompt.md  code-review.prompt.md  fix-quality.prompt.md  generate-pack.prompt.md  package-health.prompt.md  review-pr.prompt.md  search-tweaks.prompt.md  write-tests.prompt.md
.github/skills/: add-tweaks.skill.md  architecture.skill.md  package-managers.skill.md  search-tweaks.skill.md  tool-versions.skill.md
.github/workflows/: ci.yml  codeql.yml  debug.yml  dependency-review.yml  label.yml  notify-failure.yml  pack-validation.yml  packages.yml  pages.yml  powershell.yml  python.yml  release-prep.yml  release.yml  smoke.yml  stale.yml  weekly.yml
NativeGUI/: PythonBridge.cs  RegiLattice.Native.sln  RegiLatticeNative.csproj  Theme.cs
NativeGUI/Forms/: AboutDialog.cs  MainForm.Designer.cs  MainForm.cs  ScoopManagerDialog.cs
NativeGUI/PackageManagers/: PipManager.cs
NativeGUITests/: FormCreationTests.cs  PackageManagerTests.cs  PythonBridgeTests.cs
archive/NativeGUI-old/: Program.cs  PythonBridge.cs
archive/NativeGUITests-old/: NativeGUITests.csproj  TweakInfoTests.cs
archive/python/: .env.ps1  .pre-commit-config.yaml  RegiLattice.psm1  fix-local-placeholders.py  fix-remaining.py  fix-tweak-placeholders-v2.py  fix-tweak-placeholders.py  generate-csharp-tweaks.py  pyproject.toml  pyrightconfig.json  regilattice-completion.ps1  test-changed.ps1  test_benchmarks.py  test_corpguard.py  test_deps.py  test_elevation.py  test_gui_theme.py  test_locale.py  test_marketplace.py  test_property.py
chocolatey/: regilattice.nuspec
chocolatey/tools/: VERIFICATION.txt  chocolateyInstall.ps1  chocolateyUninstall.ps1
completions/: RegiLattice.ps1
docs/: API.md  Api.md  Architecture.md  CHANGELOG.md  CLI-Reference.md  CONTRIBUTING.md  Coverage.md  DEVELOPMENT.md  Development.md  PackAuthoring.md  PluginMarketplace.md  Profiling.md  Roadmap-v5.md  Roadmap.md  SCOOP.engineer‑friendly.tool.md  SECURITY.md  Security-Inventory.md  Security.md  TROUBLESHOOTING.md  Troubleshooting.md  TweakCategories.md  index.md  tweak-schema.json
gem/: regilattice.gemspec
gem/lib/: regilattice.rb
installer/: AppxManifest.xml  Package.wxs  RegiLattice.Installer.wixproj
legacy/: Launch-RegiLattice.bat  README.md
legacy/powershell/: Add-DisableCortana.ps1  Add-DisableGameDVR.ps1  Add-DisableLastAccess.ps1  Add-DisableMouseAccel.ps1  Add-DisableTelemetry.ps1  Add-LongPaths.ps1  Add-Performance.ps1  Add-RegistryBackup.ps1  Add-SvcHostSplit.ps1  Add-TakeOwnership.ps1  Add-VerboseBoot.ps1  Lib-CorpGuard.ps1  Lib-RegiLattice.ps1  Remove-DisableCortana.ps1  Remove-DisableGameDVR.ps1  Remove-DisableLastAccess.ps1  Remove-DisableTelemetry.ps1  Remove-LongPaths.ps1  Remove-Performance.ps1  Remove-RegistryBackup.ps1  Remove-SvcHostSplit.ps1  Remove-TakeOwnership.ps1  Remove-VerboseBoot.ps1  System_Restore_Point.ps1
maven/: pom.xml  settings.xml
npm/: .npmrc  install.js  package.json
packs/: accessibility-inclusive.rlpack.json  developer-full.rlpack.json  enterprise-soc2.rlpack.json  gaming-fps.rlpack.json  index.json  privacy-extreme.rlpack.json
powershell/: RegiLattice.psd1  RegiLattice.psm1
regilattice/: __init__.py  analytics.py  cli.py  config.py  corpguard.py  deps.py  elevation.py  gui.py  gui_dialogs.py  gui_theme.py  gui_tooltip.py  gui_widgets.py  hwinfo.py  locale.py  logger.py  marketplace.py  menu.py  profiler.py  ratings.py  registry.py
regilattice/tweaks/: __init__.py  _template.py  accessibility.py  adobe.py  audio.py  backup.py  boot.py  (+64 more)
scoop/: regilattice.json
scripts/: Audit-Duplications.ps1  Bump-Version.ps1  Generate-AppIcon.ps1  Run-MutationTests.ps1  Setup-Dev.ps1  Sync-CopilotInstructions.ps1
tests/: .runsettings  Test-Launcher.Tests.ps1  conftest.py  test_analytics.py  test_benchmarks.py  test_cli.py  test_config.py  test_corpguard.py  test_deps.py  test_elevation.py  test_gui.py  test_gui_dialogs.py  test_gui_theme.py  test_gui_tooltip.py  test_gui_widgets.py  test_hwinfo.py  test_integration.py  test_locale.py  test_marketplace.py  test_menu.py  test_property.py  test_ratings.py  test_registry.py  test_tweaks_init.py  test_tweaks_smoke.py  xunit.runner.json
turbotweak/: __init__.py  cli.py  corpguard.py  gui.py  menu.py  registry.py  tweaks.py
winget/: RegiLattice.RegiLattice.installer.yaml  RegiLattice.RegiLattice.locale.en-US.yaml  RegiLattice.RegiLattice.yaml
(+1188 files in other folders)
