[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regilattice"
version = "2.0.0"
description = "RegiLattice — Windows registry tweak toolkit with plugin architecture, GUI, and corporate safety."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "aeger" }]
keywords = [
    "windows",
    "registry",
    "tweaks",
    "performance",
    "privacy",
    "debloat",
    "regilattice",
    "gui",
    "tkinter",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
regilattice = "regilattice.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "mypy", "ruff"]

# ── Tool configuration ──────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py310"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
# ARG002: 'require_admin' kwarg is part of the standard TweakDef API signature
# and must be present even when unused, for consistency.
ignore = ["ARG002"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportUnnecessaryTypeIgnoreComment = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["regilattice"]
omit = ["regilattice/__main__.py"]

[tool.pylint."messages_control"]
# W0613 / unused-argument: require_admin kwarg is part of the standard TweakDef
#   API signature and must be present even when unused (same as ruff ARG002).
# W0718 / broad-exception-caught: intentional defensive patterns throughout.
# W1510 / subprocess-run-check: we handle errors ourselves where appropriate.
# W1404 / implicit-str-concat-in-sequence: used for long registry path strings.
# W0201 / attribute-defined-outside-init: ctypes struct patterns.
disable = [
    "W0613",
    "unused-argument",
    "W0718",
    "broad-exception-caught",
    "W1510",
    "subprocess-run-check",
    "W1404",
    "implicit-str-concat",
    "W0201",
    "attribute-defined-outside-init",
]
