[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regilattice"
version = "1.0.2"
description = "RegiLattice — Windows registry tweak toolkit with plugin architecture, GUI, and corporate safety."
readme = "Readme.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "YairRajwan" }]
keywords = [
    "windows",
    "registry",
    "tweaks",
    "performance",
    "privacy",
    "debloat",
    "regilattice",
    "gui",
    "tkinter",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/RajwanYair/RegiLattice"
Repository = "https://github.com/RajwanYair/RegiLattice"
"Bug Tracker" = "https://github.com/RajwanYair/RegiLattice/issues"
Changelog = "https://github.com/RajwanYair/RegiLattice/blob/main/Changelog.md"

[project.scripts]
regilattice = "regilattice.cli:main"
regilattice-gui = "regilattice.gui:launch"
regilattice-menu = "regilattice.menu:main"

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=7,<8",
    "pytest-mock>=3.15,<4",
    "pytest-timeout>=2.3,<3",
    "pytest-xdist>=3.8,<4",
    "hypothesis>=6.100,<7",
    "mypy>=1.18,<2",
    "ruff>=0.15,<1",
    "snakeviz>=2.2,<3",
    "pyinstrument>=4.6,<5",
]

# ── Tool configuration ──────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py310"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
# ARG002: 'require_admin' kwarg is part of the standard TweakDef API signature
# and must be present even when unused, for consistency.
ignore = ["ARG002"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tomli"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "regilattice.gui"
disallow_untyped_calls = false

[tool.pyright]
# Full Pyright/Pylance config lives in pyrightconfig.json (takes precedence).
# These are kept in sync for tools that read pyproject.toml only.
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportUnnecessaryTypeIgnoreComment = false

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default: quiet + short tracebacks.  Use -v to restore verbose output.
# Parallel run (fastest): pytest -n auto --dist=worksteal
# GUI tests are isolated per-process so xdist is safe here.
addopts = "-q --tb=short"
# Default timeout for all tests (seconds). GUI tests that spawn Tk windows
# may block indefinitely without a timeout in headless/CI environments.
timeout = 30
timeout_func_only = false

[tool.coverage.run]
source = ["regilattice"]
omit = ["regilattice/__main__.py"]

# =============================================================================
# HYPOTHESIS - Property-Based Testing
# =============================================================================

[tool.hypothesis]
# Default profile for local dev - fast
database = ".hypothesis/db"

[tool.hypothesis.settings]
max_examples = 100
deadline = 5000
suppress_health_check = ["too_slow", "data_too_large"]
deriving = true
# =============================================================================
# BANDIT - Security Linting
# =============================================================================

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    "external",
    "archive",
    "build",
    "dist",
]
skips = [
    "B101", # assert_used - acceptable in tests
    "B603", # subprocess_without_shell_equals_true - handled manually
    "B607", # start_process_with_partial_path - handled manually
]
